bin/com/sintactico/y.output
   0  $accept : programa $end

   1  programa : declaraciones bloque
   2           | declaraciones
   3           | bloque

   4  declaraciones : declaraciones declaracion
   5                | declaracion

   6  declaracion : INT identificadores
   7              | GLOBAL identificadores

   8  identificadores : ID ',' identificadores
   9                  | ID ';'
  10                  | ID

  11  bloque : sent_tipos bloque
  12         | sent_tipos
  13         | ambitos bloque
  14         | ambitos

  15  sent_tipos : sent_simple
  16             | sent_estruct

  17  ambitos : '{' bloque '}'
  18          | '{' declaraciones bloque '}'

  19  sent_simple : asignacion ';'
  20              | imprimir
  21              | ID

  22  sent_estruct : iter_loop
  23               | sent_sel

  24  asignacion : ID OP_ASIG exp_aritmetica ';'

  25  $$1 :

  26  asignacion : ID OP_ASIG exp_aritmetica $$1 ID OP_ASIG

  27  imprimir : PRINT cartel ';'
  28           | PRINT cartel
  29           | PRINT ';'

  30  cartel : '(' CHAIN ')'
  31         | '(' CHAIN
  32         | '(' ')'
  33         | CHAIN ')'

  34  exp_aritmetica : exp_aritmetica '+' term_aritmetica
  35                 | exp_aritmetica '-' term_aritmetica
  36                 | term_aritmetica

  37  term_aritmetica : term_aritmetica '*' '(' exp_aritmetica ')'
  38                  | term_aritmetica '/' '(' exp_aritmetica ')'
  39                  | term_aritmetica '*' factor
  40                  | term_aritmetica '/' factor
  41                  | factor

  42  factor : ID
  43         | CTEI

  44  cond : '(' exp_aritmetica comparadores exp_aritmetica ')'
  45       | '(' exp_aritmetica comparadores exp_aritmetica
  46       | exp_aritmetica comparadores exp_aritmetica ')'
  47       | exp_aritmetica comparadores exp_aritmetica
  48       | '(' exp_aritmetica '=' exp_aritmetica ')'

  49  comparadores : '<'
  50               | '>'
  51               | "<="
  52               | ">="
  53               | "<>"
  54               | "=="

  55  cuerpo : BEGIN sent_tipos END

  56  sent_sel : IF cuerpo_if

  57  cuerpo_if : cond THEN cuerpo
  58            | cond THEN cuerpo ELSE cuerpo

  59  iter_loop : LOOP cuerpo UNTIL cond

state 0
	$accept : . programa $end  (0)

	INT  shift 1
	ID  shift 2
	GLOBAL  shift 3
	IF  shift 4
	LOOP  shift 5
	PRINT  shift 6
	'{'  shift 7
	.  error

	programa  goto 8
	declaraciones  goto 9
	bloque  goto 10
	declaracion  goto 11
	sent_tipos  goto 12
	ambitos  goto 13
	sent_simple  goto 14
	sent_estruct  goto 15
	asignacion  goto 16
	imprimir  goto 17
	iter_loop  goto 18
	sent_sel  goto 19


state 1
	declaracion : INT . identificadores  (6)

	ID  shift 20
	.  error

	identificadores  goto 21


state 2
	sent_simple : ID .  (21)
	asignacion : ID . OP_ASIG exp_aritmetica ';'  (24)
	asignacion : ID . OP_ASIG exp_aritmetica $$1 ID OP_ASIG  (26)

	OP_ASIG  shift 22
	$end  reduce 21
	ID  reduce 21
	IF  reduce 21
	LOOP  reduce 21
	PRINT  reduce 21
	END  reduce 21
	'{'  reduce 21
	'}'  reduce 21


state 3
	declaracion : GLOBAL . identificadores  (7)

	ID  shift 20
	.  error

	identificadores  goto 23


state 4
	sent_sel : IF . cuerpo_if  (56)

	ID  shift 24
	CTEI  shift 25
	'('  shift 26
	.  error

	exp_aritmetica  goto 27
	term_aritmetica  goto 28
	factor  goto 29
	cond  goto 30
	cuerpo_if  goto 31


state 5
	iter_loop : LOOP . cuerpo UNTIL cond  (59)

	BEGIN  shift 32
	.  error

	cuerpo  goto 33


state 6
	imprimir : PRINT . cartel ';'  (27)
	imprimir : PRINT . cartel  (28)
	imprimir : PRINT . ';'  (29)

	CHAIN  shift 34
	';'  shift 35
	'('  shift 36
	.  error

	cartel  goto 37


state 7
	ambitos : '{' . bloque '}'  (17)
	ambitos : '{' . declaraciones bloque '}'  (18)

	INT  shift 1
	ID  shift 2
	GLOBAL  shift 3
	IF  shift 4
	LOOP  shift 5
	PRINT  shift 6
	'{'  shift 7
	.  error

	declaraciones  goto 38
	bloque  goto 39
	declaracion  goto 11
	sent_tipos  goto 12
	ambitos  goto 13
	sent_simple  goto 14
	sent_estruct  goto 15
	asignacion  goto 16
	imprimir  goto 17
	iter_loop  goto 18
	sent_sel  goto 19


state 8
	$accept : programa . $end  (0)

	$end  accept


state 9
	programa : declaraciones . bloque  (1)
	programa : declaraciones .  (2)
	declaraciones : declaraciones . declaracion  (4)

	INT  shift 1
	ID  shift 2
	GLOBAL  shift 3
	IF  shift 4
	LOOP  shift 5
	PRINT  shift 6
	'{'  shift 7
	$end  reduce 2

	bloque  goto 40
	declaracion  goto 41
	sent_tipos  goto 12
	ambitos  goto 13
	sent_simple  goto 14
	sent_estruct  goto 15
	asignacion  goto 16
	imprimir  goto 17
	iter_loop  goto 18
	sent_sel  goto 19


state 10
	programa : bloque .  (3)

	.  reduce 3


state 11
	declaraciones : declaracion .  (5)

	.  reduce 5


state 12
	bloque : sent_tipos . bloque  (11)
	bloque : sent_tipos .  (12)

	ID  shift 2
	IF  shift 4
	LOOP  shift 5
	PRINT  shift 6
	'{'  shift 7
	$end  reduce 12
	'}'  reduce 12

	bloque  goto 42
	sent_tipos  goto 12
	ambitos  goto 13
	sent_simple  goto 14
	sent_estruct  goto 15
	asignacion  goto 16
	imprimir  goto 17
	iter_loop  goto 18
	sent_sel  goto 19


state 13
	bloque : ambitos . bloque  (13)
	bloque : ambitos .  (14)

	ID  shift 2
	IF  shift 4
	LOOP  shift 5
	PRINT  shift 6
	'{'  shift 7
	$end  reduce 14
	'}'  reduce 14

	bloque  goto 43
	sent_tipos  goto 12
	ambitos  goto 13
	sent_simple  goto 14
	sent_estruct  goto 15
	asignacion  goto 16
	imprimir  goto 17
	iter_loop  goto 18
	sent_sel  goto 19


state 14
	sent_tipos : sent_simple .  (15)

	.  reduce 15


state 15
	sent_tipos : sent_estruct .  (16)

	.  reduce 16


state 16
	sent_simple : asignacion . ';'  (19)

	';'  shift 44
	.  error


state 17
	sent_simple : imprimir .  (20)

	.  reduce 20


state 18
	sent_estruct : iter_loop .  (22)

	.  reduce 22


state 19
	sent_estruct : sent_sel .  (23)

	.  reduce 23


state 20
	identificadores : ID . ',' identificadores  (8)
	identificadores : ID . ';'  (9)
	identificadores : ID .  (10)

	','  shift 45
	';'  shift 46
	$end  reduce 10
	INT  reduce 10
	ID  reduce 10
	GLOBAL  reduce 10
	IF  reduce 10
	LOOP  reduce 10
	PRINT  reduce 10
	'{'  reduce 10


state 21
	declaracion : INT identificadores .  (6)

	.  reduce 6


state 22
	asignacion : ID OP_ASIG . exp_aritmetica ';'  (24)
	asignacion : ID OP_ASIG . exp_aritmetica $$1 ID OP_ASIG  (26)

	ID  shift 24
	CTEI  shift 25
	.  error

	exp_aritmetica  goto 47
	term_aritmetica  goto 28
	factor  goto 29


state 23
	declaracion : GLOBAL identificadores .  (7)

	.  reduce 7


state 24
	factor : ID .  (42)

	.  reduce 42


state 25
	factor : CTEI .  (43)

	.  reduce 43


state 26
	cond : '(' . exp_aritmetica comparadores exp_aritmetica ')'  (44)
	cond : '(' . exp_aritmetica comparadores exp_aritmetica  (45)
	cond : '(' . exp_aritmetica '=' exp_aritmetica ')'  (48)

	ID  shift 24
	CTEI  shift 25
	.  error

	exp_aritmetica  goto 48
	term_aritmetica  goto 28
	factor  goto 29


state 27
	exp_aritmetica : exp_aritmetica . '+' term_aritmetica  (34)
	exp_aritmetica : exp_aritmetica . '-' term_aritmetica  (35)
	cond : exp_aritmetica . comparadores exp_aritmetica ')'  (46)
	cond : exp_aritmetica . comparadores exp_aritmetica  (47)

	'+'  shift 49
	'-'  shift 50
	'<'  shift 51
	'>'  shift 52
	"<="  shift 53
	">="  shift 54
	"<>"  shift 55
	"=="  shift 56
	.  error

	comparadores  goto 57


state 28
	exp_aritmetica : term_aritmetica .  (36)
	term_aritmetica : term_aritmetica . '*' '(' exp_aritmetica ')'  (37)
	term_aritmetica : term_aritmetica . '/' '(' exp_aritmetica ')'  (38)
	term_aritmetica : term_aritmetica . '*' factor  (39)
	term_aritmetica : term_aritmetica . '/' factor  (40)

	'*'  shift 58
	'/'  shift 59
	$end  reduce 36
	ID  reduce 36
	IF  reduce 36
	THEN  reduce 36
	LOOP  reduce 36
	PRINT  reduce 36
	END  reduce 36
	'='  reduce 36
	';'  reduce 36
	'{'  reduce 36
	'}'  reduce 36
	')'  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	'<'  reduce 36
	'>'  reduce 36
	"<="  reduce 36
	">="  reduce 36
	"<>"  reduce 36
	"=="  reduce 36


state 29
	term_aritmetica : factor .  (41)

	.  reduce 41


state 30
	cuerpo_if : cond . THEN cuerpo  (57)
	cuerpo_if : cond . THEN cuerpo ELSE cuerpo  (58)

	THEN  shift 60
	.  error


state 31
	sent_sel : IF cuerpo_if .  (56)

	.  reduce 56


state 32
	cuerpo : BEGIN . sent_tipos END  (55)

	ID  shift 2
	IF  shift 4
	LOOP  shift 5
	PRINT  shift 6
	.  error

	sent_tipos  goto 61
	sent_simple  goto 14
	sent_estruct  goto 15
	asignacion  goto 16
	imprimir  goto 17
	iter_loop  goto 18
	sent_sel  goto 19


state 33
	iter_loop : LOOP cuerpo . UNTIL cond  (59)

	UNTIL  shift 62
	.  error


state 34
	cartel : CHAIN . ')'  (33)

	')'  shift 63
	.  error


state 35
	imprimir : PRINT ';' .  (29)

	.  reduce 29


state 36
	cartel : '(' . CHAIN ')'  (30)
	cartel : '(' . CHAIN  (31)
	cartel : '(' . ')'  (32)

	CHAIN  shift 64
	')'  shift 65
	.  error


state 37
	imprimir : PRINT cartel . ';'  (27)
	imprimir : PRINT cartel .  (28)

	';'  shift 66
	$end  reduce 28
	ID  reduce 28
	IF  reduce 28
	LOOP  reduce 28
	PRINT  reduce 28
	END  reduce 28
	'{'  reduce 28
	'}'  reduce 28


state 38
	declaraciones : declaraciones . declaracion  (4)
	ambitos : '{' declaraciones . bloque '}'  (18)

	INT  shift 1
	ID  shift 2
	GLOBAL  shift 3
	IF  shift 4
	LOOP  shift 5
	PRINT  shift 6
	'{'  shift 7
	.  error

	bloque  goto 67
	declaracion  goto 41
	sent_tipos  goto 12
	ambitos  goto 13
	sent_simple  goto 14
	sent_estruct  goto 15
	asignacion  goto 16
	imprimir  goto 17
	iter_loop  goto 18
	sent_sel  goto 19


state 39
	ambitos : '{' bloque . '}'  (17)

	'}'  shift 68
	.  error


state 40
	programa : declaraciones bloque .  (1)

	.  reduce 1


state 41
	declaraciones : declaraciones declaracion .  (4)

	.  reduce 4


state 42
	bloque : sent_tipos bloque .  (11)

	.  reduce 11


state 43
	bloque : ambitos bloque .  (13)

	.  reduce 13


state 44
	sent_simple : asignacion ';' .  (19)

	.  reduce 19


state 45
	identificadores : ID ',' . identificadores  (8)

	ID  shift 20
	.  error

	identificadores  goto 69


state 46
	identificadores : ID ';' .  (9)

	.  reduce 9


state 47
	asignacion : ID OP_ASIG exp_aritmetica . ';'  (24)
	asignacion : ID OP_ASIG exp_aritmetica . $$1 ID OP_ASIG  (26)
	exp_aritmetica : exp_aritmetica . '+' term_aritmetica  (34)
	exp_aritmetica : exp_aritmetica . '-' term_aritmetica  (35)
	$$1 : .  (25)

	';'  shift 70
	'+'  shift 49
	'-'  shift 50
	ID  reduce 25

	$$1  goto 71


state 48
	exp_aritmetica : exp_aritmetica . '+' term_aritmetica  (34)
	exp_aritmetica : exp_aritmetica . '-' term_aritmetica  (35)
	cond : '(' exp_aritmetica . comparadores exp_aritmetica ')'  (44)
	cond : '(' exp_aritmetica . comparadores exp_aritmetica  (45)
	cond : '(' exp_aritmetica . '=' exp_aritmetica ')'  (48)

	'='  shift 72
	'+'  shift 49
	'-'  shift 50
	'<'  shift 51
	'>'  shift 52
	"<="  shift 53
	">="  shift 54
	"<>"  shift 55
	"=="  shift 56
	.  error

	comparadores  goto 73


state 49
	exp_aritmetica : exp_aritmetica '+' . term_aritmetica  (34)

	ID  shift 24
	CTEI  shift 25
	.  error

	term_aritmetica  goto 74
	factor  goto 29


state 50
	exp_aritmetica : exp_aritmetica '-' . term_aritmetica  (35)

	ID  shift 24
	CTEI  shift 25
	.  error

	term_aritmetica  goto 75
	factor  goto 29


state 51
	comparadores : '<' .  (49)

	.  reduce 49


state 52
	comparadores : '>' .  (50)

	.  reduce 50


state 53
	comparadores : "<=" .  (51)

	.  reduce 51


state 54
	comparadores : ">=" .  (52)

	.  reduce 52


state 55
	comparadores : "<>" .  (53)

	.  reduce 53


state 56
	comparadores : "==" .  (54)

	.  reduce 54


state 57
	cond : exp_aritmetica comparadores . exp_aritmetica ')'  (46)
	cond : exp_aritmetica comparadores . exp_aritmetica  (47)

	ID  shift 24
	CTEI  shift 25
	.  error

	exp_aritmetica  goto 76
	term_aritmetica  goto 28
	factor  goto 29


state 58
	term_aritmetica : term_aritmetica '*' . '(' exp_aritmetica ')'  (37)
	term_aritmetica : term_aritmetica '*' . factor  (39)

	ID  shift 24
	CTEI  shift 25
	'('  shift 77
	.  error

	factor  goto 78


state 59
	term_aritmetica : term_aritmetica '/' . '(' exp_aritmetica ')'  (38)
	term_aritmetica : term_aritmetica '/' . factor  (40)

	ID  shift 24
	CTEI  shift 25
	'('  shift 79
	.  error

	factor  goto 80


state 60
	cuerpo_if : cond THEN . cuerpo  (57)
	cuerpo_if : cond THEN . cuerpo ELSE cuerpo  (58)

	BEGIN  shift 32
	.  error

	cuerpo  goto 81


state 61
	cuerpo : BEGIN sent_tipos . END  (55)

	END  shift 82
	.  error


state 62
	iter_loop : LOOP cuerpo UNTIL . cond  (59)

	ID  shift 24
	CTEI  shift 25
	'('  shift 26
	.  error

	exp_aritmetica  goto 27
	term_aritmetica  goto 28
	factor  goto 29
	cond  goto 83


state 63
	cartel : CHAIN ')' .  (33)

	.  reduce 33


state 64
	cartel : '(' CHAIN . ')'  (30)
	cartel : '(' CHAIN .  (31)

	')'  shift 84
	$end  reduce 31
	ID  reduce 31
	IF  reduce 31
	LOOP  reduce 31
	PRINT  reduce 31
	END  reduce 31
	';'  reduce 31
	'{'  reduce 31
	'}'  reduce 31


state 65
	cartel : '(' ')' .  (32)

	.  reduce 32


state 66
	imprimir : PRINT cartel ';' .  (27)

	.  reduce 27


state 67
	ambitos : '{' declaraciones bloque . '}'  (18)

	'}'  shift 85
	.  error


state 68
	ambitos : '{' bloque '}' .  (17)

	.  reduce 17


state 69
	identificadores : ID ',' identificadores .  (8)

	.  reduce 8


state 70
	asignacion : ID OP_ASIG exp_aritmetica ';' .  (24)

	.  reduce 24


state 71
	asignacion : ID OP_ASIG exp_aritmetica $$1 . ID OP_ASIG  (26)

	ID  shift 86
	.  error


state 72
	cond : '(' exp_aritmetica '=' . exp_aritmetica ')'  (48)

	ID  shift 24
	CTEI  shift 25
	.  error

	exp_aritmetica  goto 87
	term_aritmetica  goto 28
	factor  goto 29


state 73
	cond : '(' exp_aritmetica comparadores . exp_aritmetica ')'  (44)
	cond : '(' exp_aritmetica comparadores . exp_aritmetica  (45)

	ID  shift 24
	CTEI  shift 25
	.  error

	exp_aritmetica  goto 88
	term_aritmetica  goto 28
	factor  goto 29


state 74
	exp_aritmetica : exp_aritmetica '+' term_aritmetica .  (34)
	term_aritmetica : term_aritmetica . '*' '(' exp_aritmetica ')'  (37)
	term_aritmetica : term_aritmetica . '/' '(' exp_aritmetica ')'  (38)
	term_aritmetica : term_aritmetica . '*' factor  (39)
	term_aritmetica : term_aritmetica . '/' factor  (40)

	'*'  shift 58
	'/'  shift 59
	$end  reduce 34
	ID  reduce 34
	IF  reduce 34
	THEN  reduce 34
	LOOP  reduce 34
	PRINT  reduce 34
	END  reduce 34
	'='  reduce 34
	';'  reduce 34
	'{'  reduce 34
	'}'  reduce 34
	')'  reduce 34
	'+'  reduce 34
	'-'  reduce 34
	'<'  reduce 34
	'>'  reduce 34
	"<="  reduce 34
	">="  reduce 34
	"<>"  reduce 34
	"=="  reduce 34


state 75
	exp_aritmetica : exp_aritmetica '-' term_aritmetica .  (35)
	term_aritmetica : term_aritmetica . '*' '(' exp_aritmetica ')'  (37)
	term_aritmetica : term_aritmetica . '/' '(' exp_aritmetica ')'  (38)
	term_aritmetica : term_aritmetica . '*' factor  (39)
	term_aritmetica : term_aritmetica . '/' factor  (40)

	'*'  shift 58
	'/'  shift 59
	$end  reduce 35
	ID  reduce 35
	IF  reduce 35
	THEN  reduce 35
	LOOP  reduce 35
	PRINT  reduce 35
	END  reduce 35
	'='  reduce 35
	';'  reduce 35
	'{'  reduce 35
	'}'  reduce 35
	')'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'<'  reduce 35
	'>'  reduce 35
	"<="  reduce 35
	">="  reduce 35
	"<>"  reduce 35
	"=="  reduce 35


state 76
	exp_aritmetica : exp_aritmetica . '+' term_aritmetica  (34)
	exp_aritmetica : exp_aritmetica . '-' term_aritmetica  (35)
	cond : exp_aritmetica comparadores exp_aritmetica . ')'  (46)
	cond : exp_aritmetica comparadores exp_aritmetica .  (47)

	')'  shift 89
	'+'  shift 49
	'-'  shift 50
	$end  reduce 47
	ID  reduce 47
	IF  reduce 47
	THEN  reduce 47
	LOOP  reduce 47
	PRINT  reduce 47
	END  reduce 47
	'{'  reduce 47
	'}'  reduce 47


state 77
	term_aritmetica : term_aritmetica '*' '(' . exp_aritmetica ')'  (37)

	ID  shift 24
	CTEI  shift 25
	.  error

	exp_aritmetica  goto 90
	term_aritmetica  goto 28
	factor  goto 29


state 78
	term_aritmetica : term_aritmetica '*' factor .  (39)

	.  reduce 39


state 79
	term_aritmetica : term_aritmetica '/' '(' . exp_aritmetica ')'  (38)

	ID  shift 24
	CTEI  shift 25
	.  error

	exp_aritmetica  goto 91
	term_aritmetica  goto 28
	factor  goto 29


state 80
	term_aritmetica : term_aritmetica '/' factor .  (40)

	.  reduce 40


state 81
	cuerpo_if : cond THEN cuerpo .  (57)
	cuerpo_if : cond THEN cuerpo . ELSE cuerpo  (58)

	ELSE  shift 92
	$end  reduce 57
	ID  reduce 57
	IF  reduce 57
	LOOP  reduce 57
	PRINT  reduce 57
	END  reduce 57
	'{'  reduce 57
	'}'  reduce 57


state 82
	cuerpo : BEGIN sent_tipos END .  (55)

	.  reduce 55


state 83
	iter_loop : LOOP cuerpo UNTIL cond .  (59)

	.  reduce 59


state 84
	cartel : '(' CHAIN ')' .  (30)

	.  reduce 30


state 85
	ambitos : '{' declaraciones bloque '}' .  (18)

	.  reduce 18


state 86
	asignacion : ID OP_ASIG exp_aritmetica $$1 ID . OP_ASIG  (26)

	OP_ASIG  shift 93
	.  error


state 87
	exp_aritmetica : exp_aritmetica . '+' term_aritmetica  (34)
	exp_aritmetica : exp_aritmetica . '-' term_aritmetica  (35)
	cond : '(' exp_aritmetica '=' exp_aritmetica . ')'  (48)

	')'  shift 94
	'+'  shift 49
	'-'  shift 50
	.  error


state 88
	exp_aritmetica : exp_aritmetica . '+' term_aritmetica  (34)
	exp_aritmetica : exp_aritmetica . '-' term_aritmetica  (35)
	cond : '(' exp_aritmetica comparadores exp_aritmetica . ')'  (44)
	cond : '(' exp_aritmetica comparadores exp_aritmetica .  (45)

	')'  shift 95
	'+'  shift 49
	'-'  shift 50
	$end  reduce 45
	ID  reduce 45
	IF  reduce 45
	THEN  reduce 45
	LOOP  reduce 45
	PRINT  reduce 45
	END  reduce 45
	'{'  reduce 45
	'}'  reduce 45


state 89
	cond : exp_aritmetica comparadores exp_aritmetica ')' .  (46)

	.  reduce 46


state 90
	exp_aritmetica : exp_aritmetica . '+' term_aritmetica  (34)
	exp_aritmetica : exp_aritmetica . '-' term_aritmetica  (35)
	term_aritmetica : term_aritmetica '*' '(' exp_aritmetica . ')'  (37)

	')'  shift 96
	'+'  shift 49
	'-'  shift 50
	.  error


state 91
	exp_aritmetica : exp_aritmetica . '+' term_aritmetica  (34)
	exp_aritmetica : exp_aritmetica . '-' term_aritmetica  (35)
	term_aritmetica : term_aritmetica '/' '(' exp_aritmetica . ')'  (38)

	')'  shift 97
	'+'  shift 49
	'-'  shift 50
	.  error


state 92
	cuerpo_if : cond THEN cuerpo ELSE . cuerpo  (58)

	BEGIN  shift 32
	.  error

	cuerpo  goto 98


state 93
	asignacion : ID OP_ASIG exp_aritmetica $$1 ID OP_ASIG .  (26)

	.  reduce 26


state 94
	cond : '(' exp_aritmetica '=' exp_aritmetica ')' .  (48)

	.  reduce 48


state 95
	cond : '(' exp_aritmetica comparadores exp_aritmetica ')' .  (44)

	.  reduce 44


state 96
	term_aritmetica : term_aritmetica '*' '(' exp_aritmetica ')' .  (37)

	.  reduce 37


state 97
	term_aritmetica : term_aritmetica '/' '(' exp_aritmetica ')' .  (38)

	.  reduce 38


state 98
	cuerpo_if : cond THEN cuerpo ELSE cuerpo .  (58)

	.  reduce 58


39 terminals, 23 nonterminals
60 grammar rules, 99 states
